# AOC2016

./: .gitignore  CMakeLists.txt  README.md  benchmark.bat  benchmark.sh  benchmark_all.bat  benchmark_all.sh  create_day.sh  main.cpp  run_all.bat  run_all.sh
benchmarks/: benchmark_day1.json  benchmark_day10.json  benchmark_day11.json  benchmark_day12.json  benchmark_day13.json  benchmark_day2.json  benchmark_day3.json  benchmark_day4.json  benchmark_day5.json  benchmark_day6.json  benchmark_day7.json  benchmark_day8.json  benchmark_day9.json
common/: md5Hash.h  timer.h
day1/: CMakeLists.txt  day1.cpp
day10/: CMakeLists.txt  day10.cpp
day11/: CMakeLists.txt  day11.cpp  day11Slow.cpp
day12/: CMakeLists.txt  day12.cpp
day13/: CMakeLists.txt  day13.cpp
day14/: CMakeLists.txt  day14.cpp
day15/: CMakeLists.txt  day15.cpp
day16/: CMakeLists.txt  day16.cpp
day17/: CMakeLists.txt  day17.cpp
day18/: CMakeLists.txt  day18.cpp
day19/: CMakeLists.txt  day19.cpp
day2/: CMakeLists.txt  day2.cpp
day20/: CMakeLists.txt  day20.cpp
day3/: CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
day5/: CMakeLists.txt  day5-continuous.cpp  day5.cpp  day5.cu  day5.cuh  day5CUDA.cpp
day6/: CMakeLists.txt  day6.cpp
day7/: CMakeLists.txt  day7.cpp
day8/: CMakeLists.txt  day8.cpp
day9/: CMakeLists.txt  day9.cpp
